# Digital-Identity

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  abbildungen.pptx  deploy.sh  main.cpp  package.json
arduino/Master_Gyro_Multi_DMP/: ImuUnit.h  MPU6050.cpp  Master_Gyro_Multi_DMP.ino
arduino/Master_Gyro_Multi_DMP/src/: ImuUnit.h  MPU6050_Wrapper.h  PixelRingDisplay.h
data_science/: .RData  .Rhistory  3dOfFreedomVelocity.R  6dOfFreedomVelocity.R  9degOfFreedomAcceleration.R  kalman_test.R  notebook_fusion.Rmd  notebook_fusion.html  notebook_guanglong.Rmd  notebook_guanglong.html  script.nb.html  vars.RData
data_science/res/: imu_and_kinect_demo.csv  imu_and_kinect_demo_1.csv  imu_and_kinect_with_euler_and_head.csv  imu_right_hand_and_kinect_2.csv  kinectData.csv  localizedkinectData.csv
data_science/res/phybox_data/: Accelerometer.csv  Magnetometer.csv
data_science/res/phybox_data_2/: Accelerometer.csv
data_science/scripts/: 3dOfFreedomVelocity.R  6dOfFreedomVelocity.R  functions.R  initial_data.R  kalman_test.R  models.R  simulation.R  test.R
data_science/scripts/deprecated/: 9degOfFreedomAcceleration.R  closest.R  plots.R
data_science/tests/: test.R
data_science/tests/testthat/: test.R  test_guanglong_acceleration_model.R  test_guanglong_acceleration_simulation.R  test_guanglong_orientation_model.R
data_science/workbooks/: imu_sensor_eval.Rmd  imu_sensor_eval.nb.html  notebook_guanglong.Rmd  notebook_guanglong.html  notebook_guanglong_simulation.Rmd  notebook_guanglong_simulation.html  notebook_guanglong_simulation_no_gravity_with_noise_no_rotation.html  notebook_guanglong_simulation_with_gravity_no_input_vector_no_noise_no_rotation.html  script.html
demo/unity-skeleton-visualize/Assets/: AccelerationKalmanFilterBehaviour.cs  KeepPositionInsideBounds.cs  link.xml
demo/unity-skeleton-visualize/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
kinect-api/: .env  CMakeLists.txt
kinect-api/res/: kinect_t_pose_sample_4_final.csv  kinect_t_pose_sample_5_final_red_shirt.csv  kinect_t_pose_unlegged.csv
kinect-api/src/: App.cpp  App.h  glut.cpp  glut.h  json_file_io.cpp  json_file_io.h  kinect_processor.cpp  kinect_processor.h  kinect_websocket.cpp  main.cpp
kinect-api/src/faceTracking/: FTHelper.cpp  FTHelper.h  KinectSensor.cpp
opengl-frontend/: CMakeLists.txt
opengl-frontend/res/: lighting.fs  lighting.vs  skinning.fs  skinning.vs  test.json
opengl-frontend/src/: Calibration.cpp  Calibration.h  Matf4f.h  Quaternion.h  json_file_reader.cpp  json_file_reader.h  kinect_data_client.cpp  kinect_data_client.h  main.cpp
opengl-frontend/src/ogl/: font_technique.cpp  font_technique.h  glut_backend.cpp  glut_backend.h  lighting_technique.h  math_3d.h  mesh.cpp  mesh.h  opencv_skinned_mesh.cpp  opencv_skinned_mesh.h  opencv_texture.cpp  opencv_texture.h  shadow_map_technique.cpp  skinning_technique.cpp  skybox.cpp  skybox.h  skybox_technique.cpp
prototype/kinect-api/res/: kinect_t_pose_absolut.csv  kinect_t_pose_sample_1_base.csv  kinect_t_pose_sample_2_legs.csv  kinect_t_pose_sample_3_final.csv
prototype/kinect-api/src/: glut.h  json_file_io.cpp  kinect_processor.h  kinect_websocket.h
prototype/opengl-frontend/src/: Quaternion.h  kinect_data_client.cpp
res/: boxer.fbx  shader.vs
research/citations/: 10.1007_s10846-012-9742-1-citation.ris
src/: App.vue  main.cpp  main.js
src/components/: vue-camera.vue
src/ogl/: glut_backend.cpp  glut_backend.h  lighting_technique.cpp  lighting_technique.h  mesh.h  ogldev_math_3d.h  opencv_texture.cpp
studies/arduino/Master_Gyro_Multi_DMP/: Master_Gyro_Multi_DMP.ino
studies/data_science/: .RData  .Rhistory
studies/data_science/environments/: data.RData
studies/data_science/res/: imu_and_kinect.csv  imu_and_kinect_with_eule7r.csv  imu_and_kinect_with_euler.csv  imu_and_kinect_with_euler7.csv  imu_and_kinect_with_euler_and_head_2_raw.csv  imu_and_kinect_with_orientation.csv  imu_right_hand_and_kinect.csv  imu_right_hand_and_kinect_3.csv  read_usb.py
studies/data_science/scripts/: initial_data.R  simulation.R
studies/data_science/workbooks/: notebook_fusion.Rmd  notebook_guanglong.Rmd  notebook_guanglong.html  notebook_guanglong_simulation.Rmd  notebook_guanglong_simulation.html  notebook_guanglong_simulation_no_gravity_as_input_no_noise_no_rotation_diverges.html  notebook_guanglong_simulation_no_gravity_no_noise_no_rotatation.html  notebook_guanglong_simulation_no_gravity_with_noise_with_rotation_diverges.html  script.Rmd
studies/paper/: abbildungen.pptx
unity-skeleton-visualize/Assets/: ApplyPositionToTransform.cs  ApplyPositionToTransformInspector.cs  FetchAcceleration.cs  FetchAccelerationInspector.cs  FetchAccelerometer.cs  FetchAxisVelocity.cs  FetchKinectPosition.cs  FetchOrientation.cs  KalmanFilter.cs  KalmanFilterBehaviour.cs  KeepPositionInsideBounds.cs  OrientationKalmanFilterBehaviour.cs  PrintData.cs
unity-skeleton-visualize/Assets/AvatarsDemo/: KinectAvatarsDemo.unity
unity-skeleton-visualize/Assets/DepthColliderDemo/: DepthColliderDemo.unity
unity-skeleton-visualize/Assets/GesturesDemo/: KinectGesturesDemo.unity
unity-skeleton-visualize/Assets/KinectScripts/: AvatarController.cs  KinectManager.cs
unity-skeleton-visualize/Assets/OverlayDemo/: KinectOverlayDemo.unity
unity-skeleton-visualize/Assets/Scenes/: arduino_scene.unity  cloth_test.unity  data_print.unity  imu_sim.unity  main.unity  main_other_lighting.unity  test.unity
unity-skeleton-visualize/Assets/SimpleGridShader/: GridShaderUNLITDynamic.shader  dynamic_grid.mat  sky.mat  static_grid.mat
unity-skeleton-visualize/Assets/materials/: sky.mat  white.mat
unity-skeleton-visualize/Assets/models/: cara.mat  ikcontroller.controller  ybot.prefab
unity-skeleton-visualize/Assets/prefabs/: cara.prefab  frogman.prefab
unity-skeleton-visualize/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  FbxExportSettings.asset  ProjectSettings.asset
vms/DensePose/: Vagrantfile
vms/kinect/: Vagrantfile
vms/openPose/: Vagrantfile
(+150 files in other folders)
